--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Vuestic Admin</title>
+    
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   </body>
 </html>
